# zipcode

./: .env  Dockerfile  demo.py  main.py  pyproject.toml  requirements.txt  system_prompt.txt
pipeline/: dev-pipelines.yml
server/: client.py  server.py  services.json
server/services/: appointment.py  demo.py  doctorlist.py  get_url.py  hospitallist.py  medicinelist.py  savings.py  zipcode.py
